# tally

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_base  LICENSE  Makefile  README.md  client.cu  consts.py  gen_preload.py  run_sim.py  run_test.sh  server.cu  start_client.sh  start_server.sh
.github/workflows/: docker-image.yml
benchmark/priority/: infer.py  train.py
config/: roudi_config.toml
include/: def.h  util.h
include/tally/: cache.h  cache_struct.h  cache_util.h  client.h  client_offline.h  const.h  consts.h  cublas_tracer.h  cuda_api.h  cuda_launch.h  cuda_util.h  daemon.h  def.h  env.h  ipc_util.h  kernel_slice.h  log.h  msg_struct.h  serialization.h  server.h  signal.h  transform.h  util.h
include/tally/cutlass/: cutlass.h  cutlass_struct.h
preload/: consts.py  gen_preload.py
preload/simulate/: sim.py  sim_api.py  trace_util.py  util.py
python/preload/: consts.py  gen_preload.py
python/preload/kernel_slicing/: slice.py
python/preload/preload/: gen_preload.py
python/preload/simulate/: sim.py  sim_api.py  trace_util.py
python/preload/slice/: slice.py
python/tally/preload/: client_consts.py  client_preload.py  consts.py  gen_preload.py  preload_util.py  profile_consts.py  profile_preload.py
python/tally/simulate/: sim.py  sim_api.py  trace_util.py
python/tally/slice/: slice.py
python/tally/transform/: ptb.py  slice.py
python/tally/util/: util.py
scripts/: CMakeLists.txt  algo.txt  build-ptx-cfg.py  gen_preload.py  kill_iox.sh  kill_iox_roudi.sh  kill_server.sh  kill_tally_server.sh  move_files.sh  output.ptx  query_server.sh  run_ptb.py  run_sim.py  run_slice.py  run_test.sh  run_transform.cpp  start_client.sh  start_client_local.sh  start_iox_roudi.sh  start_tally_client.sh  start_tally_server.sh
simulate/: parse.py  sim.py  trace_util.py  util.py
slice/: elementwise.cu  elementwise_sliced.ptx  matmul.cu
src/: preload-cubin.cpp  preload.cpp  preload_sched.cpp  preload_slice.cpp  tally_client.cpp  tally_profile_cpu.cpp  tally_profile_gpu.cpp  tally_slice.cpp
src/tally/: cache.cpp  cache_struct.cpp  client.cpp  client_offline.cpp  const.cpp  cuda_api.cpp  cuda_launch.cpp  cuda_launch_client.cpp  cuda_util.cpp  daemon.cpp  env.cpp  kernel_slice.cpp  measurements.cpp  measurements_client.cpp  partial.cpp  scheduler.cpp  server.cpp  server.cu  signal.cpp  tally_server.cpp  transform.cpp  util.cpp
src/tally/cutlass/: cutlass.cu
src/tally/preload/: tally_client.cpp  tally_client_offline.cpp  tally_profile_cpu.cpp  tally_profile_gpu.cpp  tally_slice.cpp  tally_transform.cpp
src/tally/scheduler/: naive.cpp  priority.cpp  profile.cpp  scheduler.cpp  tgs.cpp  workload_agnostic.cpp  workload_aware.cpp
tests/: CMakeLists.txt  ampere_tf32_tensorop_gemm.cu  basic_gemm.cu  cublas.cu  cudnn_test.cu  cutlass-helper.h  elementwise.cu  helpers.h  kernel.fatbin  kernel.ptx  matmul.cu  max_pool.cu  run-hidet.py  run-test.sh  run-torch-compile.py  run-triton.py  test-jit.cpp  train.py  turing_tensorop_gemm.cu
tests/cuda_samples_basic/: add_driver_api.cu  ampere_tf32_tensorop_gemm.cu  basic_gemm.cu  batched_gemm.cu  batched_gemm_cutlass.cu  cublas.cu  cublasLt.cu  cublasLt.h  cublas_to_cutlass.cu  cuda-memcpy-test.cu  cudnnReduceTensor.cu  cudnn_test.cu  cutlass_bias_epilogue.cu  elem-matmul.cu  elementwise.cu  elementwise_with_cond.cu  launch_host_func.cu  matmul.cu  matmul_fp16.cu  ptb-exp.cu  test-sync.cu  test_nccl.cu  volta_tensorop_gemm.cu
tests/cudnn-samples/: CMakeLists.txt  conv_sample.cpp  conv_sample.h  test_list.cpp
tests/cudnn_samples_v8/: samples_common.mk
tests/cudnn_samples_v8/RNN/: Makefile  RNN_example.cu
tests/cudnn_samples_v8/RNN_v8.0/: RNN_example.h
tests/cudnn_samples_v8/conv_sample/: Makefile
tests/cudnn_samples_v8/mnistCUDNN/: Makefile
tests/cudnn_samples_v8/multiHeadAttention/: Makefile
tests/hidet_samples/: run-hidet.py
tests/pytorch_samples/: DeviceSelectSweepKernel.py  addmm.py  dropout.py  finetune_pegasus.py  finetune_whisper.py  max_pool.py  pin_memory.py  resnet50-compiled-1.py  resnet50-compiled-2.py  run-imagenet.py  run-torch-compile.py  train.py
tests/tensorflow_samples/: cifar_train.py  tf_basic.py
